Account app(signup, signin, signout)

--- a/test_task/templates/upload_users/index.html
+++ b/test_task/templates/upload_users/index.html
@@ -4,11 +4,32 @@
 <div class="main-box cotaner text-center mt-6">
     <br>
     <h2>My Users</h2>
-    {% if user.username == 'admin' %}
+    {% if user.is_superuser %}
         <a class="btn btn-sm btn-success" href="/upload/">Upload Users</a>
         <br><br>
     {% endif %}
 </div>
+<!-- Message -->
+    <div>
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+                <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+                <script>
+                    var m = "{{ message }}";
+                    swal("Perfect!", m, "success");
+                </script>
+            {% elif message.tags == 'info' %}
+                <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+                <script>
+                    var m = "{{ message }}";
+                    swal("Perfect!", m, "info");
+                </script>
+            {% endif %}
+        {% endfor %}
+    </div>
+    <!-- END Message -->
+
+{% if user.is_authenticated %}
 <div class="card my">
     <div class="card-body">
         <h5 class="card-title">My user info:</h5>
@@ -41,10 +62,27 @@
         </p>
     </div>
 </div>
+{% else %}
+<div class="card my">
+    <div class="card-body">
+        <h5 class="card-title">My user info:</h5>
+        <h6 class="card-subtitle mb-2 text-muted"></h6>
+        <p class="card-text">
+            <h3 class="my_h3">Information is available for authorized users</h3>
+        </p>
+    </div>
+</div>
+{% endif %}    
 <style>
     .my_table{
         width: 85%;
         margin: auto;
+    }
+    .my_h3{
+        text-align: center;
+        background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 80%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 </style>
 
